--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -23,9 +23,9 @@ jobs:
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
-          host: ${{secrets.HOST}}
+          host: ${{secrets.VUE_HOST}}
           username: ${{secrets.SSH_USER_NAME}}          
-          key: ${{secrets.SSH_KEY}}
+          key: ${{secrets.SSH_KEY2}}
           source: "./dist/*"
           target: "/var/www/html"
           strip_components: 1
